# EU-AI-Act

./: .gitignore  01-company-profile.html  02-ai-inventory.html  03-gap-analysis.html  04-roadmap.html  05-agents.html  README.md  index.html  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: ncr-report.md
.github/workflows/: html-validation.yml  python-tests.yml
agents/: AGENTS_USER_GUIDE.md  __init__.py  bias_watch_agent.py  classify_bot.py  conformity_bot.py  doc_draft_agent.py  fria_agent.py
agents/schemas/: bias_watch_tools.json  classify_bot_tools.json  conformity_tools.json  doc_draft_tools.json  fria_tools.json
artifacts/: 06-technical-doc.html  07-risk-management.html  08-data-governance.html  09-human-oversight.html  10-fria.html  11-conformity.html
css/: style.css
docs/: architecture.md  decisions.md
tests/: conftest.py  test_bias_watch_agent.py  test_classify_bot.py  test_conformity_bot.py  test_doc_draft_agent.py  test_fria_agent.py
